--- a/html/home.html
+++ b/html/home.html
@@ -18,8 +18,11 @@
                 <ul>
                     <li><a href="#home">home</a></li>
                     <li><a href="#about">about</a></li>
-                    <li><a href="#work">cases</a></li>
+                    <li><a href="#work">work</a></li>
                     <li><a href="#contact">contact</a></li>
+                    <li><a href="#"><i class="fa fa-github"></i></a></li>
+                    <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </nav>
         </div>
@@ -31,29 +34,55 @@
 
     </header>
 
-    <section id="work">
+    <section id="work" class="work">
         <h1>my work.</h1>
 
         <div class="work-container">
             <div class="row">
-                <div class="work-item"></div>
-                <div class="work-item"></div>
-                <div class="work-item"></div>
+                <div class="work-item">
+                    <img src="../img/workitem.png" alt="">
+                    <h3>empatico illustrations</h3>
+                </div>
+                <div class="work-item">
+                    <img src="../img/workitem.png" alt="">
+                    <h3>empatico illustrations</h3>
+                </div>
+                <div class="work-item">
+                    <img src="../img/workitem.png" alt="">
+                    <h3>empatico illustrations</h3>
+                </div>
             </div>
 
             <div class="row">
-                <div class="work-item"></div>
-                <div class="work-item"></div>
-                <div class="work-item"></div>
+                <div class="work-item">
+                    <img src="../img/workitem.png" alt="">
+                    <h3>empatico illustrations</h3>
+                </div>
+                <div class="work-item">
+                    <img src="../img/workitem.png" alt="">
+                    <h3>empatico illustrations</h3>
+                </div>
+                <div class="work-item">
+                    <img src="../img/workitem.png" alt="">
+                    <h3>empatico illustrations</h3>
+                </div>
             </div>
 
             <div class="row">
-                <div class="work-item"></div>
-                <div class="work-item"></div>
-                <div class="work-item"></div>
+                <div class="work-item">
+                    <img src="../img/workitem.png" alt="">
+                    <h3>empatico illustrations</h3>
+                </div>
+                <div class="work-item">
+                    <img src="../img/workitem.png" alt="">
+                    <h3>empatico illustrations</h3>
+                </div>
+                <div class="work-item">
+                    <img src="../img/workitem.png" alt="">
+                    <h3>empatico illustrations</h3>
+                </div>
             </div>
-        </div>
-        
+
     </section>
     
     <script src="../js/script.js"></script>
