added work and about seperate pages, added desktop and mobile styling, cleaned up main styles for navbar and footer

--- a/html/home.html
+++ b/html/home.html
@@ -18,9 +18,8 @@
                 <ul>
                     <li><a href="#home">home</a></li>
                     <li><a href="#work">work</a></li>
-                    <li><a href="#contact">contact</a></li>
+                    <li><a href="#about">about</a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    <li><a href="#"><i class="fa fa-behance"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </nav>
@@ -81,54 +80,14 @@
                     <h3>empatico illustrations</h3>
                 </div>
             </div>
+
     </section>
 
-    <section id="about" class="about">
-        <div class="about-container">
-            <div class="about-item">
-                <h3>experience.</h3>
-                <h5>Marketing Manager, Email</h5>
-                <p>Empatico | January 2020 - July 2020</p>
 
-                <h5>Email Marketing Specialist</h5>
-                <p>Empatico | January 2019 - January 2020</p>
 
-                <h5>Digital Media Consultant (contract-based)</h5>
-                <p>Metis LLC | December 2017 - present</p>
 
-                <h5>Media and Communications Specialist</h5>
-                <p>Center for Educational Innovation | April 2016 - December 2018</p>
 
-                <h5>Media and Communications Associate</h5>
-                <p>Center for Educational Innovation | October 2014 - April 2016</p>
-            </div>
-            <div class="about-item">
-                <h3>skills & tools.</h3>
-                <h5>Front-End Web Development</h5>
-                <p>HTML, CSS, SASS, Flexbox, Javascript, WordPress</p>
-
-                <h5>Graphic & UX Design</h5>
-                <p>Sketch, Illustrator, After Effects, Photoshop</p>
-
-                <h5>Email and Social Media Marketing</h5>
-                <p>MailChimp, Sendgrid, Sprout Social, Twitter, Facebook, Instagram</p>
-
-                <h5>Data Tracking and Analytics</h5>
-                <p>Mixpanel, Fullstory, Tableau, Google Analytics</p>
-
-                <h5>Video Production & Photography</h5>
-                <p>Final Cut Pro, Premiere Pro, Canon DSLRs</p>
-
-                <h5>Organization & Planning</h5>
-                <p>Google Tools Suite, Office Suite, Mac OSX</p>
-                 
-            </div>
-            <div class="about-item">
-                <h3>contact.</h3>
-                <a href="mailto:anniesyso@gmail.com"><p>say hi <i class="fa fa-envelope"></i></p></a>
-            </div>
-        </div>
-    </section>
+    
 
     <footer>
         <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2020</p>
