added pages and styling for css art and for ncsrc work pages

--- a/html/cssart.html
+++ b/html/cssart.html
@@ -31,16 +31,20 @@
     </header>
 
     <section class="project-header">
-        <h1>title of project</h1>
-        <h4>summary of project</h4>
-        <p>key elements and notes of projects</p>
+        <h1>css art & animations</h1>
+        <h4>small miscellaneous illustrations and animations</h4>
+        <p>built with: html, css, sass, javascript</p>
     </section>
 
     <section id="project-images" class="project-images">
-        <img src="../img/workitem.png" alt="">
-        <img src="../img/workitem.png" alt="">
-        <img src="../img/workitem.png" alt="">
-        <img src="../img/workitem.png" alt="">
+        <img src="../img/cssart/lighthouse-night.png" alt="">
+        <p>live preview: <a href="https://codepen.io/anniesyso/full/GRZKKMo">https://codepen.io/anniesyso/full/GRZKKMo</a></p>
+        <img src="../img/cssart/croc2.png" alt="">
+        <p>live preview: <a href="https://codepen.io/anniesyso/full/YzXJOXR">https://codepen.io/anniesyso/full/YzXJOXR</a></p>
+        <img src="../img/cssart/oct.png" alt="">
+        <p>live preview: <a href="https://codepen.io/anniesyso/full/GRJwxmy">https://codepen.io/anniesyso/full/GRJwxmy</a></p>
+        <img src="../img/cssart/snake.png" alt="">
+        <p>live preview: <a href="https://codepen.io/anniesyso/full/PoqywWw">https://codepen.io/anniesyso/full/PoqywWw</a></p>
     </section>
 
     <div class="top">
