--- a/html/about.html
+++ b/html/about.html
@@ -9,23 +9,26 @@
     <script src="https://kit.fontawesome.com/5e889410a3.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body id="top">
 
     <header id="header">
-        <div id="navbar" class="navbar">
-            <h1 class="logo">
-                annie syso.
-            </h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">home</a></li>
-                    <li><a href="#work">work</a></li>
-                    <li><a href="#about">about</a></li>
+        <nav class="navbar">
+            <div class="logo">
+                <h1 class="logo">annie syso.</h1>
+            </div>
+
+            <div class="open-menu"><i class="fa fa-bars"></i></div>
+                <ul class="main-menu">
+                    <li><a href="../html/home.html">home</a></li>
+                    <li><a href="../html/work.html">work</a></li>
+                    <li><a href="../html/about.html">about</a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+
+                    <div class="closed-menu"><i class="fa fa-times"></i></div>
                 </ul>
-            </nav>
-        </div>
+            </div>
+         </nav>
     </header>
 
     <section id="about" class="about">
@@ -77,8 +80,14 @@
         </div>
     </section>
 
+    <div class="top">
+        <a href="#top"><i class="fa fa-arrow-circle-up"></i></a>
+    </div>
+
     <footer>
         <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2020</p>
     </footer>
+
+    <script src="../js/script.js"></script>
     
 </body>
