--- a/html/video.html
+++ b/html/video.html
@@ -31,16 +31,17 @@
     </header>
 
     <section class="project-header">
-        <h1>title of project</h1>
-        <h4>summary of project</h4>
-        <p>key elements and notes of projects</p>
+        <h1>NCSRC case study videos</h1>
+        <h4>4 short videos produced for the National Charter School Resource Center</h4>
+        <p>role: director, videographer, editor</p>
     </section>
 
     <section id="project-images" class="project-images">
-        <img src="../img/workitem.png" alt="">
-        <img src="../img/workitem.png" alt="">
-        <img src="../img/workitem.png" alt="">
-        <img src="../img/workitem.png" alt="">
+        <iframe src="https://player.vimeo.com/video/398947040?title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/398947911?title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/398947918?title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/398947904?title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <p>full case study: <a href="https://charterschoolcenter.ed.gov/case-study/preparation-replication-case-study-aeci">https://charterschoolcenter.ed.gov/case-study/preparation-replication-case-study-aeci</a></p>
     </section>
 
     <div class="top">
