--- a/html/home.html
+++ b/html/home.html
@@ -50,38 +50,38 @@
                     <h3>NCSRC case study</h3>
                 </div>
                 <div class="work-item">
-                    <img src="../img/workitem.png" alt="">
-                    <h3>empatico illustrations</h3>
+                    <img src="../img/blended/blended-cover.png" alt="">
+                    <h3>blended learning animation</h3>
                 </div>
             </div>
 
             <div class="row">
                 <div class="work-item">
-                    <img src="../img/workitem.png" alt="">
-                    <h3>empatico illustrations</h3>
+                    <img src="../img/webcover.png" alt="">
+                    <h3>web design & development</h3>
                 </div>
                 <div class="work-item">
-                    <img src="../img/workitem.png" alt="">
-                    <h3>empatico illustrations</h3>
+                    <img src="../img/landing/cover.png" alt="">
+                    <h3>summer leadership conference page</h3>
                 </div>
                 <div class="work-item">
-                    <img src="../img/workitem.png" alt="">
-                    <h3>empatico illustrations</h3>
+                    <img src="../img/info/teach.png" alt="">
+                    <h3>infographics</h3>
                 </div>
             </div>
 
             <div class="row">
                 <div class="work-item">
-                    <img src="../img/workitem.png" alt="">
-                    <h3>empatico illustrations</h3>
+                    <img src="../img/looping/cover.png" alt="">
+                    <h3>looping GIFs</h3>
                 </div>
                 <div class="work-item">
-                    <img src="../img/workitem.png" alt="">
-                    <h3>empatico illustrations</h3>
+                    <img src="../img/lavelle.png" alt="">
+                    <h3>k-12 education videos</h3>
                 </div>
                 <div class="work-item">
-                    <img src="../img/workitem.png" alt="">
-                    <h3>empatico illustrations</h3>
+                    <img src="../img/branding/cover.png" alt="">
+                    <h3>graphic design & branding</h3>
                 </div>
             </div>
 
