--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 
             <div class="open-menu"><i class="fa fa-bars"></i></div>
                 <ul class="main-menu">
-                    <li><a href="../html/home.html">home</a></li>
+                    <li><a href="../html/index.html">home</a></li>
                     <li><a href="#work">work</a></li>
                     <li><a href="../html/about.html">about</a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
