re-linked all moved files and navigation

--- a/dir/about.html
+++ b/dir/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>annie syso.</title>
 
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../dir/css/styles.css">
     <script src="https://kit.fontawesome.com/5e889410a3.js" crossorigin="anonymous"></script>
 </head>
 
@@ -14,14 +14,14 @@
     <header id="header">
         <nav class="navbar">
             <div class="logo">
-                <h1 class="logo">annie syso.</h1>
+                <a href="../dir/index.html"><h1 class="logo">annie syso.</h1></a>
             </div>
 
             <div class="open-menu"><i class="fa fa-bars"></i></div>
                 <ul class="main-menu">
-                    <li><a href="../html/home.html">home</a></li>
-                    <li><a href="../html/work.html">work</a></li>
-                    <li><a href="../html/about.html">about</a></li>
+                    <li><a href="../dir/index.html">home</a></li>
+                    <li><a href="../dir/index.html#work">work</a></li>
+                    <li><a href="../dir/about.html">about</a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 
@@ -80,9 +80,9 @@
         </div>
     </section>
 
-    <div class="top">
+    <!-- <div class="top">
         <a href="#top"><i class="fa fa-arrow-circle-up"></i></a>
-    </div>
+    </div> -->
 
     <footer>
         <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2020</p>
