--- a/dir/blended.html
+++ b/dir/blended.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>annie syso.</title>
 
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../dir/css/styles.css">
+
     <script src="https://kit.fontawesome.com/5e889410a3.js" crossorigin="anonymous"></script>
 </head>
 
@@ -13,14 +14,14 @@
     <header id="header">
         <nav class="navbar">
             <div class="logo">
-                <h1 class="logo">annie syso.</h1>
+                <a href="../dir/index.html"><h1 class="logo">annie syso.</h1></a>
             </div>
 
             <div class="open-menu"><i class="fa fa-bars"></i></div>
                 <ul class="main-menu">
-                    <li><a href="../html/home.html">home</a></li>
-                    <li><a href="#work">work</a></li>
-                    <li><a href="../html/about.html">about</a></li>
+                    <li><a href="../dir/index.html">home</a></li>
+                    <li><a href="../dir/index.html#work">work</a></li>
+                    <li><a href="../dir/about.html">about</a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 
@@ -38,10 +39,10 @@
 
     <section id="project-images" class="project-images">
         <iframe src="https://www.youtube.com/embed/l7HuYDgl_fI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="../img/blended/belt.png">
-        <img src="../img/blended/cal.png">
-        <img src="../img/blended/icons.png">
-        <img src="../img/blended/blended.gif">
+        <img src="../dir/img/blended/belt.png">
+        <img src="../dir/img/blended/cal.png">
+        <img src="../dir/img/blended/icons.png">
+        <img src="../dir/img/blended/blended.gif">
     </section>
 
     <div class="top">
