--- a/dir/index.html
+++ b/dir/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>annie syso.</title>
 
-    <link rel="stylesheet" href="../dir/css/styles.css">
+    <link rel="stylesheet" href="/dir/css/styles.css">
     <script src="https://kit.fontawesome.com/5e889410a3.js" crossorigin="anonymous"></script>
 </head>
 <body id="top">
     <header id="header">
         <nav class="navbar">
             <div class="logo">
-                <a href="../dir/index.html"><h1 class="logo">annie syso.</h1></a>
+                <a href="/dir/index.html"><h1 class="logo">annie syso.</h1></a>
             </div>
 
             <div class="open-menu"><i class="fa fa-bars"></i></div>
                 <ul class="main-menu">
-                    <li><a href="../dir/index.html">home</a></li>
+                    <li><a href="/dir/index.html">home</a></li>
                     <li><a href="#work">work</a></li>
-                    <li><a href="../dir/about.html">about</a></li>
+                    <li><a href="/dir/about.html">about</a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 
