--- a/dir/index.html
+++ b/dir/index.html
@@ -43,30 +43,30 @@
         <div class="work-container">
             <div class="row">
                 <div class="work-item">
-                    <a href="cssart.html"><img src="../dir/img/cssart/snake.png" alt=""></a>
+                    <a href="cssart.html"><img src="./img/cssart/snake.png" alt=""></a>
                     <h3>css art & animations</h3>
                 </div>
                 <div class="work-item">
-                    <a href="/dir/video.html"><img src="../dir/img/ncsrc/ncsrc.png" alt=""></a>
+                    <a href="/dir/video.html"><img src="./img/ncsrc/ncsrc.png" alt=""></a>
                     <h3>NCSRC case study</h3>
                 </div>
                 <div class="work-item">
-                    <a href="/dir/blended.html"><img src="../dir/img/blended/blended-cover.png" alt=""></a>
+                    <a href="/dir/blended.html"><img src="./img/blended/blended-cover.png" alt=""></a>
                     <h3>blended learning animation</h3>
                 </div>
             </div>
 
             <div class="row">
                 <div class="work-item">
-                    <a href="/dir/brand.html"><img src="../dir/img/branding/cover.png" alt=""></a>
+                    <a href="/dir/brand.html"><img src="./img/branding/cover.png" alt=""></a>
                     <h3>graphic design, branding, & gifs</h3>
                 </div>
                 <div class="work-item">
-                    <a href="/dir/ceivideo.html"><img src="../dir/img/lavelle.png" alt=""></a>
+                    <a href="/dir/ceivideo.html"><img src="./img/lavelle.png" alt=""></a>
                     <h3>k-12 education videos</h3>
                 </div>
                 <div class="work-item">
-                    <a href="/dir/info.html"><img src="../dir/img/info/teach.png" alt=""></a>
+                    <a href="/dir/info.html"><img src="./img/info/teach.png" alt=""></a>
                     <h3>infographics</h3>
                 </div>
             </div>
@@ -98,6 +98,6 @@
         <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2020</p>
     </footer>
     
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
