fixed directories for all pages to launch on netifly app

--- a/dir/cssart.html
+++ b/dir/cssart.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>annie syso.</title>
 
-    <link rel="stylesheet" href="../dir/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/5e889410a3.js" crossorigin="anonymous"></script>
 </head>
 
@@ -13,14 +13,14 @@
     <header id="header">
         <nav class="navbar">
             <div class="logo">
-                <a href="../dir/index.html"><h1 class="logo">annie syso.</h1></a>
+                <a href="./index.html"><h1 class="logo">annie syso.</h1></a>
             </div>
 
             <div class="open-menu"><i class="fa fa-bars"></i></div>
                 <ul class="main-menu">
-                    <li><a href="../dir/index.html">home</a></li>
-                    <li><a href="../dir/index.html#work">work</a></li>
-                    <li><a href="../dir/about.html">about</a></li>
+                    <li><a href="./index.html">home</a></li>
+                    <li><a href="./index.html#work">work</a></li>
+                    <li><a href="./about.html">about</a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 
@@ -37,13 +37,13 @@
     </section>
 
     <section id="project-images" class="project-images">
-        <img src="../dir/img/cssart/lighthouse-night.png" alt="">
+        <img src="./img/cssart/lighthouse-night.png" alt="">
         <p>live preview: <a href="https://codepen.io/anniesyso/full/GRZKKMo">https://codepen.io/anniesyso/full/GRZKKMo</a></p>
-        <img src="../dir/img/cssart/croc2.png" alt="">
+        <img src="./img/cssart/croc2.png" alt="">
         <p>live preview: <a href="https://codepen.io/anniesyso/full/YzXJOXR">https://codepen.io/anniesyso/full/YzXJOXR</a></p>
-        <img src="../dir/img/cssart/oct.png" alt="">
+        <img src="./img/cssart/oct.png" alt="">
         <p>live preview: <a href="https://codepen.io/anniesyso/full/GRJwxmy">https://codepen.io/anniesyso/full/GRJwxmy</a></p>
-        <img src="../dir/img/cssart/snake.png" alt="">
+        <img src="./img/cssart/snake.png" alt="">
         <p>live preview: <a href="https://codepen.io/anniesyso/full/PoqywWw">https://codepen.io/anniesyso/full/PoqywWw</a></p>
     </section>
 
@@ -55,7 +55,7 @@
         <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2020</p>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
     
 </body>
 </html>
