--- a/dir/index.html
+++ b/dir/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>annie syso.</title>
 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/5e889410a3.js" crossorigin="anonymous"></script>
 </head>
 <body id="top">
     <header id="header">
         <nav class="navbar">
             <div class="logo">
-                <a href="/index.html"><h1 class="logo">annie syso.</h1></a>
+                <a href="./index.html"><h1 class="logo">annie syso.</h1></a>
             </div>
 
             <div class="open-menu"><i class="fa fa-bars"></i></div>
                 <ul class="main-menu">
-                    <li><a href="/index.html">home</a></li>
+                    <li><a href="./index.html">home</a></li>
                     <li><a href="#work">work</a></li>
-                    <li><a href="/about.html">about</a></li>
+                    <li><a href="./about.html">about</a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 
@@ -43,30 +43,30 @@
         <div class="work-container">
             <div class="row">
                 <div class="work-item">
-                    <a href="cssart.html"><img src="./img/cssart/snake.png" alt=""></a>
+                    <a href="./cssart.html"><img src="./img/cssart/snake.png" alt=""></a>
                     <h3>css art & animations</h3>
                 </div>
                 <div class="work-item">
-                    <a href="/dir/video.html"><img src="./img/ncsrc/ncsrc.png" alt=""></a>
+                    <a href="./video.html"><img src="./img/ncsrc/ncsrc.png" alt=""></a>
                     <h3>NCSRC case study</h3>
                 </div>
                 <div class="work-item">
-                    <a href="/dir/blended.html"><img src="./img/blended/blended-cover.png" alt=""></a>
+                    <a href="./blended.html"><img src="./img/blended/blended-cover.png" alt=""></a>
                     <h3>blended learning animation</h3>
                 </div>
             </div>
 
             <div class="row">
                 <div class="work-item">
-                    <a href="/dir/brand.html"><img src="./img/branding/cover.png" alt=""></a>
+                    <a href="./brand.html"><img src="./img/branding/cover.png" alt=""></a>
                     <h3>graphic design, branding, & gifs</h3>
                 </div>
                 <div class="work-item">
-                    <a href="/dir/ceivideo.html"><img src="./img/lavelle.png" alt=""></a>
+                    <a href="./ceivideo.html"><img src="./img/lavelle.png" alt=""></a>
                     <h3>k-12 education videos</h3>
                 </div>
                 <div class="work-item">
-                    <a href="/dir/info.html"><img src="./img/info/teach.png" alt=""></a>
+                    <a href="./info.html"><img src="./img/info/teach.png" alt=""></a>
                     <h3>infographics</h3>
                 </div>
             </div>
