--- a/dir/brand.html
+++ b/dir/brand.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>annie syso.</title>
 
-    <link rel="stylesheet" href="../dir/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/5e889410a3.js" crossorigin="anonymous"></script>
 </head>
 
@@ -13,14 +13,14 @@
     <header id="header">
         <nav class="navbar">
             <div class="logo">
-                <a href="../dir/index.html"><h1 class="logo">annie syso.</h1></a>
+                <a href="./index.html"><h1 class="logo">annie syso.</h1></a>
             </div>
 
             <div class="open-menu"><i class="fa fa-bars"></i></div>
                 <ul class="main-menu">
-                    <li><a href="../dir/index.html">home</a></li>
-                    <li><a href="../dir/index.html#work">work</a></li>
-                    <li><a href="../dir/about.html">about</a></li>
+                    <li><a href="./index.html">home</a></li>
+                    <li><a href="./index.html#work">work</a></li>
+                    <li><a href="./about.html">about</a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 
@@ -37,16 +37,16 @@
     </section>
 
     <section id="project-images" class="project-images">
-        <img src="../dir/img/branding/postcard2.png">
-        <img src="../dir/img/branding/banner3.png">
-        <img src="../dir/img/landing/cover.png">
-        <img src="../dir/img/branding/inno.png">
-        <img src="../dir/img/branding/postcard.png">
-        <img src="../dir/img//branding/confcover.jpg">
-        <img src="../dir/img/looping/school.gif">
-        <img src="../dir/img/looping/plc.gif">
-        <img src="../dir/img/looping/photo.gif">
-        <img src="../dir/img/looping/growth.gif">
+        <img src="./img/branding/postcard2.png">
+        <img src="./img/branding/banner3.png">
+        <img src="./img/landing/cover.png">
+        <img src="./img/branding/inno.png">
+        <img src="./img/branding/postcard.png">
+        <img src="./img//branding/confcover.jpg">
+        <img src="./img/looping/school.gif">
+        <img src="./img/looping/plc.gif">
+        <img src="./img/looping/photo.gif">
+        <img src="./img/looping/growth.gif">
 
 
     </section>
@@ -59,7 +59,7 @@
         <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2020</p>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
     
 </body>
 </html>
