edit to about page

--- a/dir/about.html
+++ b/dir/about.html
@@ -14,7 +14,7 @@
     <header id="header">
         <nav class="navbar">
             <div class="logo">
-                <a href="../dir/index.html"><h1 class="logo">annie syso.</h1></a>
+                <a href="./index.html"><h1 class="logo">annie syso.</h1></a>
             </div>
 
             <div class="open-menu"><i class="fa fa-bars"></i></div>
