added intro para and small edits to work pages

--- a/dir/ceivideo.html
+++ b/dir/ceivideo.html
@@ -32,7 +32,7 @@
 
     <section class="project-header">
         <h1>k-12 eduction videos</h1>
-        <h4>short videos produced for the a charter school federal grant project</h4>
+        <h4>short videos produced for a charter school federal grant project</h4>
         <p>role: director, videographer, editor</p>
     </section>
 
