--- a/dir/video.html
+++ b/dir/video.html
@@ -32,7 +32,7 @@
 
     <section class="project-header">
         <h1>NCSRC case study videos</h1>
-        <h4>4 short videos produced for the National Charter School Resource Center</h4>
+        <h4>short videos produced for the National Charter School Resource Center</h4>
         <p>role: director, videographer, editor</p>
     </section>
 
