--- a/dir/about.html
+++ b/dir/about.html
@@ -22,8 +22,8 @@
                     <li><a href="./index.html">home</a></li>
                     <li><a href="./index.html#work">work</a></li>
                     <li><a href="./about.html">about</a></li>
-                    <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/annsyso" target="_blank"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/annie-syso-b5539939/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 
                     <div class="closed-menu"><i class="fa fa-times"></i></div>
                 </ul>
