--- a/dir/index.html
+++ b/dir/index.html
@@ -18,7 +18,7 @@
             <div class="open-menu"><i class="fa fa-bars"></i></div>
                 <ul class="main-menu">
                     <li><a href="./index.html">home</a></li>
-                    <li><a href="#work">work</a></li>
+                    <li><a href="#work" id="work-link">work</a></li>
                     <li><a href="./about.html">about</a></li>
                     <li><a href="https://github.com/annsyso" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/annie-syso-b5539939/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
