--- a/dir/brand.html
+++ b/dir/brand.html
@@ -31,7 +31,7 @@
     </header>
 
     <section class="project-header">
-        <h1>conference branding & materials</h1>
+        <h1>graphic design & branding</h1>
         <h4>various conference and event print materials</h4>
         <p>adobe illustrator</p>
     </section>
