--- a/dir/ceivideo.html
+++ b/dir/ceivideo.html
@@ -31,7 +31,7 @@
     </header>
 
     <section class="project-header">
-        <h1>k-12 eduction videos</h1>
+        <h1>k-12 education videos</h1>
         <h4>short videos produced for a charter school federal grant project</h4>
         <p>role: director, videographer, editor</p>
     </section>
