codepen target blanks

--- a/dir/cssart.html
+++ b/dir/cssart.html
@@ -38,13 +38,13 @@
 
     <section id="project-images" class="project-images">
         <img src="./img/cssart/lighthouse-night.png" alt="">
-        <p>live preview: <a href="https://codepen.io/anniesyso/full/GRZKKMo">https://codepen.io/anniesyso/full/GRZKKMo</a></p>
+        <p>live preview: <a href="https://codepen.io/anniesyso/full/GRZKKMo" target="_blank">https://codepen.io/anniesyso/full/GRZKKMo</a></p>
         <img src="./img/cssart/croc2.png" alt="">
-        <p>live preview: <a href="https://codepen.io/anniesyso/full/YzXJOXR">https://codepen.io/anniesyso/full/YzXJOXR</a></p>
+        <p>live preview: <a href="https://codepen.io/anniesyso/full/YzXJOXR" target="_blank">https://codepen.io/anniesyso/full/YzXJOXR</a></p>
         <img src="./img/cssart/oct.png" alt="">
-        <p>live preview: <a href="https://codepen.io/anniesyso/full/GRJwxmy">https://codepen.io/anniesyso/full/GRJwxmy</a></p>
+        <p>live preview: <a href="https://codepen.io/anniesyso/full/GRJwxmy" target="_blank">https://codepen.io/anniesyso/full/GRJwxmy</a></p>
         <img src="./img/cssart/snake.png" alt="">
-        <p>live preview: <a href="https://codepen.io/anniesyso/full/PoqywWw">https://codepen.io/anniesyso/full/PoqywWw</a></p>
+        <p>live preview: <a href="https://codepen.io/anniesyso/full/PoqywWw" target="_blank">https://codepen.io/anniesyso/full/PoqywWw</a></p>
     </section>
 
     <div class="top">
