updated experience in about section

--- a/dir/about.html
+++ b/dir/about.html
@@ -36,6 +36,12 @@
 
             <div class="about-item">
                 <h3>experience.</h3>
+                <h5>Director of Marketing and Communications</h5>
+                <p>Coney Island Prep Charter School | July 2021 - Present</p>
+
+                <h5>Communications Manager</h5>
+                <p>Coney Island Prep Charter School | September 2020 - June 2021</p>
+
                 <h5>Marketing Manager, Email</h5>
                 <p>Empatico | January 2020 - July 2020</p>
 
