--- a/dir/about.html
+++ b/dir/about.html
@@ -61,10 +61,10 @@
             <div class="about-item">
                 <h3>skills & tools.</h3>
                 <h5>Front-End Web Development</h5>
-                <p>HTML, CSS, SASS, Flexbox, Javascript, WordPress</p>
+                <p>HTML, CSS, SASS, Flexbox, Javascript, WordPress, Wix</p>
 
                 <h5>Graphic & UX Design</h5>
-                <p>Sketch, Illustrator, After Effects, Photoshop</p>
+                <p>Sketch, Illustrator, After Effects, Photoshop, XD</p>
 
                 <h5>Email and Social Media Marketing</h5>
                 <p>MailChimp, Sendgrid, Sprout Social, Twitter, Facebook, Instagram</p>
@@ -76,7 +76,7 @@
                 <p>Final Cut Pro, Premiere Pro, Canon DSLRs</p>
 
                 <h5>Project Management & Organization</h5>
-                <p>Google Tools Suite, Office Suite, Clubhouse, Asana, Trello</p>
+                <p>Google Tools Suite, Office Suite, Clubhouse, Asana, Trello, Airtable</p>
             </div>
 
             <div class="about-item">
