added new work to sections

--- a/dir/brand.html
+++ b/dir/brand.html
@@ -31,22 +31,20 @@
     </header>
 
     <section class="project-header">
-        <h1>graphic design & branding</h1>
-        <h4>various conference and event print materials</h4>
+        <h1>print & promotional design</h1>
+        <h4>various fundraising, recruitment, conference and event print materials</h4>
         <p>adobe illustrator</p>
     </section>
 
     <section id="project-images" class="project-images">
+        <img src="./img/branding/postcardcip.png">
+        <img src="./img/branding/foundation.png">        
         <img src="./img/branding/postcard2.png">
         <img src="./img/branding/banner3.png">
         <img src="./img/landing/cover.png">
-        <img src="./img/branding/inno.png">
         <img src="./img/branding/postcard.png">
         <img src="./img//branding/confcover.jpg">
-        <img src="./img/looping/school.gif">
-        <img src="./img/looping/plc.gif">
-        <img src="./img/looping/photo.gif">
-        <img src="./img/looping/growth.gif">
+
 
 
     </section>
