--- a/dir/cssart.html
+++ b/dir/cssart.html
@@ -31,7 +31,7 @@
     </header>
 
     <section class="project-header">
-        <h1>css art & animations</h1>
+        <h1>css art, gifs & animations</h1>
         <h4>small miscellaneous illustrations and animations</h4>
         <p>built with: html, css, sass, javascript</p>
     </section>
@@ -45,6 +45,12 @@
         <p>live preview: <a href="https://codepen.io/anniesyso/full/GRJwxmy" target="_blank">https://codepen.io/anniesyso/full/GRJwxmy</a></p>
         <img src="./img/cssart/snake.png" alt="">
         <p>live preview: <a href="https://codepen.io/anniesyso/full/PoqywWw" target="_blank">https://codepen.io/anniesyso/full/PoqywWw</a></p>
+        <iframe src="https://www.youtube.com/embed/l7HuYDgl_fI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <img src="./img//blended/blended.gif">
+        <img src="./img//looping/school.gif">
+        <img src="./img//looping/website.gif">
+        <img src="./img//looping/photo.gif">
+
     </section>
 
     <div class="top">
