--- a/dir/index.html
+++ b/dir/index.html
@@ -45,15 +45,15 @@
             <div class="row">
                 <div class="work-item">
                     <a href="./brand.html"><img src="./img/branding/cover.png" alt=""></a>
-                    <h3>graphic design, branding, & gifs</h3>
+                    <h3>print & promotional design</h3>
                 </div>
                 <div class="work-item">
                     <a href="./cssart.html"><img src="./img/cssart/snake.png" alt=""></a>
-                    <h3>css art & animations</h3>
+                    <h3>css art, gifs & animations</h3>
                 </div>
                 <div class="work-item">
-                    <a href="./blended.html"><img src="./img/blended/blended-cover.png" alt=""></a>
-                    <h3>blended learning animation</h3>
+                    <a href="./blended.html"><img src="./img/blended/quick.png" alt=""></a>
+                    <h3>social media & infographics</h3>
                 </div>
             </div>
 
