--- a/dir/blended.html
+++ b/dir/blended.html
@@ -32,17 +32,23 @@
     </header>
 
     <section class="project-header">
-        <h1>blended learning animation</h1>
-        <h4>short explainer animation about blended learning</h4>
-        <p>adobe illustrator, adobe after effects, final cut pro</p>
+        <h1>social media & infographics</h1>
+        <p>adobe illustrator, adobe after effects</p>
     </section>
 
     <section id="project-images" class="project-images">
-        <iframe src="https://www.youtube.com/embed/l7HuYDgl_fI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="./img/blended/belt.png">
-        <img src="./img/blended/cal.png">
-        <img src="./img/blended/icons.png">
-        <img src="./img/blended/blended.gif">
+        <img src="./img/blended/success.png">
+        <img src="./img/blended/quick.png">
+        <img src="./img/info/pop.png">
+        <img src="./img/info/edtech.png">
+        <img src="./img/info/onebook.png">
+        <img src="./img/info/back.png">
+        <img src="./img/blended/important.png">
+        <img src="./img/blended/important2.png">
+        <img src="./img/blended/fafsa.png">
+        <img src="./img/blended/gotv.png">
+        <img src="./img/blended/training.png">
+        <img src="./img/blended/road.png">
     </section>
 
     <div class="top">
