condensed work section

--- a/dir/cssart.html
+++ b/dir/cssart.html
@@ -31,7 +31,7 @@
     </header>
 
     <section class="project-header">
-        <h1>css art, gifs & animations</h1>
+        <h1>videos, animations, and css art</h1>
         <h4>small miscellaneous illustrations and animations</h4>
         <p>built with: html, css, sass, javascript</p>
     </section>
@@ -46,7 +46,11 @@
         <img src="./img/cssart/snake.png" alt="">
         <p>live preview: <a href="https://codepen.io/anniesyso/full/PoqywWw" target="_blank">https://codepen.io/anniesyso/full/PoqywWw</a></p>
         <iframe src="https://www.youtube.com/embed/l7HuYDgl_fI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="./img//blended/blended.gif">
+        <iframe src="https://player.vimeo.com/video/398947040?title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/398947911?title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/398947918?title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/398947904?title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <p>full case study: <a href="https://charterschoolcenter.ed.gov/case-study/preparation-replication-case-study-aeci">https://charterschoolcenter.ed.gov/case-study/preparation-replication-case-study-aeci</a></p>
         <img src="./img//looping/school.gif">
         <img src="./img//looping/website.gif">
         <img src="./img//looping/photo.gif">
