--- a/dir/index.html
+++ b/dir/index.html
@@ -49,15 +49,16 @@
                 </div>
                 <div class="work-item">
                     <a href="./cssart.html"><img src="./img/cssart/snake.png" alt=""></a>
-                    <h3>css art, gifs & animations</h3>
+                    <h3>css art, videos & animations</h3>
                 </div>
                 <div class="work-item">
                     <a href="./blended.html"><img src="./img/blended/quick.png" alt=""></a>
                     <h3>social media & infographics</h3>
                 </div>
+                
             </div>
 
-            <div class="row">
+<!--             <div class="row">
                 <div class="work-item">
                     <a href="./video.html"><img src="./img/ncsrc/ncsrc.png" alt=""></a>
                     <h3>NCSRC case study</h3>
@@ -70,7 +71,7 @@
                     <a href="./info.html"><img src="./img/info/teach.png" alt=""></a>
                     <h3>infographics</h3>
                 </div>
-            </div>
+            </div> -->
 
             <!-- <div class="row">
                 <div class="work-item">
