reordered homepage and updated work sections

--- a/dir/info.html
+++ b/dir/info.html
@@ -32,15 +32,16 @@
 
     <section class="project-header">
         <h1>infographics</h1>
-        <h4>various infographics created for email, web, and social</h4>
+        <h4>various infographics created for email, web, and promotional use</h4>
         <p>adobe illustrator</p>
     </section>
 
     <section id="project-images" class="project-images">
-        <img src="./img/info/pop.png">
-        <img src="./img/info/edtech.png">
-        <img src="./img/info/onebook.png">
-        <img src="./img/info/back.png">
+        <img src="./img/info/success_mock.png">
+        <img src="./img/info/tri-mock.png">
+        <img src="./img/info/quick-mock.png">
+        <img src="./img/info/back-mock.png">
+
 
     </section>
 
