--- a/dir/blended.html
+++ b/dir/blended.html
@@ -32,23 +32,19 @@
     </header>
 
     <section class="project-header">
-        <h1>social media & infographics</h1>
+        <h1>social media, gifs & animations</h1>
         <p>adobe illustrator, adobe after effects</p>
     </section>
 
     <section id="project-images" class="project-images">
-        <img src="./img/blended/success.png">
-        <img src="./img/blended/quick.png">
-        <img src="./img/info/pop.png">
-        <img src="./img/info/edtech.png">
-        <img src="./img/info/onebook.png">
-        <img src="./img/info/back.png">
+        <img src="./img/blended/IG-mock.png">
         <img src="./img/blended/important.png">
         <img src="./img/blended/important2.png">
-        <img src="./img/blended/fafsa.png">
-        <img src="./img/blended/gotv.png">
-        <img src="./img/blended/training.png">
-        <img src="./img/blended/road.png">
+        <iframe src="https://www.youtube.com/embed/l7HuYDgl_fI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <img src="./img/looping/school.gif">
+        <img src="./img/looping/photo.gif">
+        <img src="./img/looping/website.gif">
+
     </section>
 
     <div class="top">
