--- a/dir/index.html
+++ b/dir/index.html
@@ -44,34 +44,34 @@
         <div class="work-container">
             <div class="row">
                 <div class="work-item">
-                    <a href="./brand.html"><img src="./img/branding/cover.png" alt=""></a>
+                    <a href="./brand.html"><img src="./img/branding/print_mock-cover.png" alt=""></a>
                     <h3>print & promotional design</h3>
                 </div>
                 <div class="work-item">
-                    <a href="./cssart.html"><img src="./img/cssart/snake.png" alt=""></a>
-                    <h3>css art, videos & animations</h3>
+                    <a href="./cssart.html"><img src="./img/cssart/light-cover.png" alt=""></a>
+                    <h3>css art & javascript projects</h3>
                 </div>
                 <div class="work-item">
-                    <a href="./blended.html"><img src="./img/blended/quick.png" alt=""></a>
-                    <h3>social media & infographics</h3>
+                    <a href="./info.html"><img src="./img/info/quick-mock.png" alt=""></a>
+                    <h3>infographics</h3>
                 </div>
-                
+
             </div>
 
-<!--             <div class="row">
+            <div class="row">
                 <div class="work-item">
                     <a href="./video.html"><img src="./img/ncsrc/ncsrc.png" alt=""></a>
                     <h3>NCSRC case study</h3>
                 </div>
                 <div class="work-item">
-                    <a href="./ceivideo.html"><img src="./img/lavelle.png" alt=""></a>
-                    <h3>k-12 education videos</h3>
+                    <a href="./blended.html"><img src="./img/blended/blended-cover.png" alt=""></a>
+                    <h3>social media, gifs & animations</h3>
                 </div>
                 <div class="work-item">
                     <a href="./info.html"><img src="./img/info/teach.png" alt=""></a>
-                    <h3>infographics</h3>
+                    <h3>web design & landing pages</h3>
                 </div>
-            </div> -->
+            </div>
 
             <!-- <div class="row">
                 <div class="work-item">
