web design work section added

--- a/dir/index.html
+++ b/dir/index.html
@@ -68,8 +68,8 @@
                     <h3>social media, gifs & animations</h3>
                 </div>
                 <div class="work-item">
-                    <a href="./info.html"><img src="./img/info/teach.png" alt=""></a>
-                    <h3>web design & landing pages</h3>
+                    <a href="./info.html"><img src="./img/web/port-mock.png" alt=""></a>
+                    <h3>web development & design</h3>
                 </div>
             </div>
 
@@ -97,7 +97,7 @@
 
 
     <footer>
-        <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2020</p>
+        <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2022</p>
     </footer>
     
     <script src="./js/script.js"></script>
