--- a/dir/info.html
+++ b/dir/info.html
@@ -31,16 +31,29 @@
     </header>
 
     <section class="project-header">
-        <h1>infographics</h1>
-        <h4>various infographics created for email, web, and promotional use</h4>
-        <p>adobe illustrator</p>
+        <h1>web design & development</h1>
+        <h4>web development and design projects</h4>
+        <p>html, css, sass, javascript</p>
     </section>
 
     <section id="project-images" class="project-images">
-        <img src="./img/info/success_mock.png">
-        <img src="./img/info/tri-mock.png">
-        <img src="./img/info/quick-mock.png">
-        <img src="./img/info/back-mock.png">
+        <img src="./img/web/port-mock.png">
+        <p>github: <a src="https://github.com/annsyso/portfolio">https://github.com/annsyso/portfolio</a></p>
+        <img src="./img/web/ping-mock.png">
+        <p>github: <a src="https://github.com/annsyso/ping-coming-soon-page">https://github.com/annsyso/ping-coming-soon-page</a></p>
+        <img src="./img/web/movie-mock.png">
+        <p>github: <a src="https://github.com/annsyso/movie-booking-site">https://github.com/annsyso/movie-booking-site</a></p>
+        <br>
+        <img src="./img/web/card-mock.png">
+        <p>codepen: <a src="https://codepen.io/anniesyso/pen/ExovvJx">https://codepen.io/anniesyso/pen/ExovvJx</a></p>
+        <br>
+        <img src="./img/web/form.png">
+        <p>codepen: <a src="https://codepen.io/anniesyso/pen/wvpqqRy">https://codepen.io/anniesyso/pen/wvpqqRy</a></p>
+        <br>
+        <img src="./img/web/login.png">
+        <p>codepen: <a src="https://codepen.io/anniesyso/pen/xxpLLow">https://codepen.io/anniesyso/pen/xxpLLow</a></p>
+        <br>
+
 
 
     </section>
@@ -50,7 +63,7 @@
     </div>
 
     <footer>
-        <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2020</p>
+        <p>made with <i class="fa fa-heart"></i> by annie. &copy; 2022</p>
     </footer>
 
     <script src="./js/script.js"></script>
