added git to experience

--- a/dir/about.html
+++ b/dir/about.html
@@ -61,7 +61,7 @@
             <div class="about-item">
                 <h3>skills & tools.</h3>
                 <h5>Front-End Web Development</h5>
-                <p>HTML, CSS, SASS, Flexbox, Javascript, WordPress, Wix</p>
+                <p>HTML, CSS, SASS, Flexbox, Javascript, WordPress, Wix, Git & version control</p>
 
                 <h5>Graphic & UX Design</h5>
                 <p>Sketch, Illustrator, After Effects, Photoshop, XD</p>
