spelling and titles

--- a/dir/brand.html
+++ b/dir/brand.html
@@ -32,7 +32,7 @@
 
     <section class="project-header">
         <h1>print & promotional design</h1>
-        <h4>various fundraising, recruitment, conference and event print materials</h4>
+        <h4>various fundraising, recruitment, conference, and event print materials</h4>
         <p>adobe illustrator</p>
     </section>
 
