--- a/dir/index.html
+++ b/dir/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="work-item">
                     <a href="./cssart.html"><img src="./img/cssart/light-cover.png" alt=""></a>
-                    <h3>videos, animations, and css art</h3>
+                    <h3>css art</h3>
                 </div>
                 <div class="work-item">
                     <a href="./info.html"><img src="./img/info/quick-mock.png" alt=""></a>
