linked new pages

--- a/dir/cssart.html
+++ b/dir/cssart.html
@@ -31,9 +31,9 @@
     </header>
 
     <section class="project-header">
-        <h1>videos, animations, and css art</h1>
-        <h4>small illustrations and animations</h4>
-        <p>built with: html, css, sass, javascript</p>
+        <h1>css art</h1>
+        <h4>small pure css illustrations and animations</h4>
+        <p>built with: css, sass</p>
     </section>
 
     <section id="project-images" class="project-images">
