--- a/dir/ceivideo.html
+++ b/dir/ceivideo.html
@@ -31,19 +31,18 @@
     </header>
 
     <section class="project-header">
-        <h1>k-12 education videos</h1>
-        <h4>short videos produced for a charter school federal grant project</h4>
-        <p>role: director, videographer, editor</p>
+        <h1>infographics</h1>
+        <p>adobe illustrator</p>
     </section>
 
+
     <section id="project-images" class="project-images">
-        <iframe src="https://www.youtube.com/embed/sSZBn0o4ggg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/O2VlaiFChYY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/Z94y_xOm1_s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/CyL9QOuMpbI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/PXc_J2ppEjg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe src="https://player.vimeo.com/video/190261668?title=0&byline=0&portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/ag13A53-poc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <img src="./img/info/success_mock.png">
+        <img src="./img/info/tri-mock.png">
+        <img src="./img/info/quick-mock.png">
+        <img src="./img/info/back-mock.png">
+
 
     </section>
 
