--- a/dir/index.html
+++ b/dir/index.html
@@ -52,7 +52,7 @@
                     <h3>css art</h3>
                 </div>
                 <div class="work-item">
-                    <a href="./info.html"><img src="./img/info/quick-mock.png" alt=""></a>
+                    <a href="./ceivideo.html"><img src="./img/info/quick-mock.png" alt=""></a>
                     <h3>infographics</h3>
                 </div>
 
