small title change

--- a/dir/index.html
+++ b/dir/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="work-item">
                     <a href="./info.html"><img src="./img/web/port-mock.png" alt=""></a>
-                    <h3>web development & design</h3>
+                    <h3>web design & development</h3>
                 </div>
             </div>
 
