added new mockups for work

--- a/dir/blended.html
+++ b/dir/blended.html
@@ -38,12 +38,11 @@
 
     <section id="project-images" class="project-images">
         <img src="./img/blended/IG-mock.png">
-        <img src="./img/blended/important.png">
-        <img src="./img/blended/important2.png">
+        <img src="./img/blended/vax-mock.png">
+        <img src="./img/blended/give-mock.png">
+        <img src="./img/blended/gif-mock.gif">
+        <img src="./img/blended/gif2-mock.gif">
         <iframe src="https://www.youtube.com/embed/l7HuYDgl_fI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="./img/looping/school.gif">
-        <img src="./img/looping/photo.gif">
-        <img src="./img/looping/website.gif">
 
     </section>
 
