updated about skills

--- a/dir/about.html
+++ b/dir/about.html
@@ -61,19 +61,16 @@
             <div class="about-item">
                 <h3>skills & tools.</h3>
                 <h5>Front-End Web Development</h5>
-                <p>HTML, CSS, SASS, Flexbox, Javascript, WordPress, Wix, Git & version control</p>
+                <p>HTML, CSS, SASS, Flexbox, Javascript, WordPress, Wix, Git, Sublime Text, VS Code</p>
 
                 <h5>Graphic & UX Design</h5>
-                <p>Sketch, Illustrator, After Effects, Photoshop, XD</p>
+                <p>Adobe Illustrator, Adobe After Effects, Adobe Photoshop, Canva, Adobe XD, Sketch</p>
 
                 <h5>Email and Social Media Marketing</h5>
                 <p>MailChimp, Sendgrid, Sprout Social, Twitter, Facebook, Instagram</p>
 
-                <h5>Data Tracking and Analytics</h5>
-                <p>Mixpanel, Fullstory, Tableau, Google Analytics</p>
-
                 <h5>Video Production & Photography</h5>
-                <p>Final Cut Pro, Premiere Pro, Canon DSLRs</p>
+                <p>Final Cut Pro, Canon DSLRs</p>
 
                 <h5>Project Management & Organization</h5>
                 <p>Google Tools Suite, Office Suite, Clubhouse, Asana, Trello, Airtable</p>
