social media title

--- a/dir/blended.html
+++ b/dir/blended.html
@@ -32,7 +32,7 @@
     </header>
 
     <section class="project-header">
-        <h1>social media, gifs & animations</h1>
+        <h1>social media & animations</h1>
         <p>adobe illustrator, adobe after effects</p>
     </section>
 
