--- a/dir/index.html
+++ b/dir/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="work-item">
                     <a href="./blended.html"><img src="./img/blended/blended-cover.png" alt=""></a>
-                    <h3>social media, gifs & animations</h3>
+                    <h3>social media & animations</h3>
                 </div>
                 <div class="work-item">
                     <a href="./info.html"><img src="./img/web/port-mock.png" alt=""></a>
